Playing with API/swagger/locale setting
