# api/messages.go
@@ -1,46 +1,80 @@
 package api
 
+import "log"
+
 // Common API response object
 type ApiResponse struct {
-    Result  string  `json:"result"`
-    Message string  `json:"message"`
+	// Either "ok" indicating success or "error" indicating failure
+	Result string `json:"result"`
+	// Message corresponding to response status
+	Message string `json:"message"`
 }
 
 // API result types
 const ApiResultOk string = "ok"
 const ApiResultError string = "error"
 
-// API result messages
-const ApiMessageCreateUserSuccess string = "Created user account, check your emails for an activation token"
-const ApiMessagePasswordComplexityTooLow string = "Password does not meet complexity requirements"
+// API status message container
+type ApiMessageContainer struct {
+    CreateUserSuccess string
+    PasswordComplexityTooLow string
+    LoginSuccessful string
+    LogoutSuccessful string
+    ActivationSuccessful string
+    UnlockSuccessful string
+    PasswordUpdated string
+    AlreadyAuthenticated string
+    Unauthorized string
+    InvalidToken string
+    InternalError string
+    SecondFactorRequired string
+    U2FRegistrationFailed string
+    U2FRegistrationComplete string
+    NoU2FPending string
+    NoU2FTokenFound string
+    TokenNameRequired string
+}
 
-const ApiMessageLoginSuccess string = "Login successful"
-const ApiMessageLogoutSuccess string = "Logout successful"
-const ApiMessageActivationSuccessful string = "Account activation successful"
-const ApiMessageUnlockSuccessful string = "Account unlock successful"
-const ApiMessagePasswordUpdated string = "Password Updated"
-const ApiMessageAlreadyAuthenticated string = "Already logged in, please log out to change accounts"
+// Create API message structure for English responses
+// TODO: these structs should be loaded from the template directory
+var ApiMessageEn = ApiMessageContainer {
+    CreateUserSuccess: "Created user account, check your emails for an activation token",
+    PasswordComplexityTooLow: "Password does not meet complexity requirements",
+    LoginSuccessful: "Login successful",
+    LogoutSuccessful: "Logout successful",
+    ActivationSuccessful: "Account activation successful",
+    UnlockSuccessful: "Account unlock successful",
+    PasswordUpdated: "Password Updated",
+    AlreadyAuthenticated: "Already logged in, please log out to change accounts",
+    Unauthorized: "You must be logged in to view this page",
+    InvalidToken: "Invalid token",
+    InternalError: "Internal server error",
+    U2FRegistrationFailed: "U2F Registration failed",
+    SecondFactorRequired: "U2F Authentication required",
+    U2FRegistrationComplete: "U2F Registration complete",
+    NoU2FPending: "U2F no authentication pending",
+    NoU2FTokenFound: "U2F matching u2f token found",
+    TokenNameRequired: "U2F token name required",
+}
 
-const ApiMessageUnauthorized string = "You must be logged in to view this page"
-const ApiMessageInvalidToken string = "Invalid token"
-const ApiMessageInternalError string = "Internal server error"
+var DefaultLocale string = "en"
 
-const ApiMessage2FARequired string = "2FA required"
-
-const ApiMessageU2FRegistrationFailed string = "U2F Registration failed"
-const ApiMessageU2FRegistrationComplete string = "U2F Registration complete"
-
-const ApiMessageSecondFactorRequired string = "U2F Authentication required"
-const ApiMessageNoU2FPending string = "U2F no authentication pending"
-const ApiMessageNoU2FTokenFound string = "U2F matching u2f token found"
-const ApiMessageTokenNameRequired string = "U2F token name required"
+func GetApiLocale(lang string) (* ApiMessageContainer) {
+    switch(lang) {
+    case "en":
+        return &ApiMessageEn;
+    default:
+        log.Printf("API message unhandled request for locale: %s\n", lang)
+        return &ApiMessageEn;
+    }
+}
 
 // API Response instances
-var ApiResponseLoginSuccess = ApiResponse{ApiResultOk, ApiMessageLoginSuccess}
-var ApiResponseLogoutSuccess = ApiResponse{ApiResultOk, ApiMessageLogoutSuccess}
-var ApiResponseActivationSuccessful = ApiResponse{ApiResultOk, ApiMessageActivationSuccessful}
-var ApiResponseUnlockSuccessful = ApiResponse{ApiResultOk, ApiMessageUnlockSuccessful}
+var ApiResponseLoginSuccess = ApiResponse{ApiResultOk, GetApiLocale(DefaultLocale).LoginSuccessful}
+var ApiResponseLogoutSuccess = ApiResponse{ApiResultOk, GetApiLocale(DefaultLocale).LogoutSuccessful}
+var ApiResponseActivationSuccessful = ApiResponse{ApiResultOk, GetApiLocale(DefaultLocale).ActivationSuccessful}
+var ApiResponseUnlockSuccessful = ApiResponse{ApiResultOk, GetApiLocale(DefaultLocale).UnlockSuccessful}
 
-var ApiResponseUnauthorized = ApiResponse{ApiResultError, ApiMessageUnauthorized}
-var ApiResponseInvalidToken = ApiResponse{ApiResultError, ApiMessageInvalidToken}
-var ApiResponseInternalError = ApiResponse{ApiResultError, ApiMessageInternalError}
+var ApiResponseUnauthorized = ApiResponse{ApiResultError, GetApiLocale(DefaultLocale).Unauthorized}
+var ApiResponseInvalidToken = ApiResponse{ApiResultError, GetApiLocale(DefaultLocale).InvalidToken}
+var ApiResponseInternalError = ApiResponse{ApiResultError, GetApiLocale(DefaultLocale).InternalError}
