# app/api.go
@@ -31,46 +31,69 @@ func (ctx *AuthPlzCtx) WriteApiResult(w http.ResponseWriter, result string, mess
 	ctx.WriteJson(w, apiResp)
 }
 
-// Create a user
+// swagger:route POST /create createUser
+//
+// Create a user account
+//
+//
+//     Consumes:
+//     - application/x-www-form-urlencoded
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       200: apiResponse
+//       400: badRequestResponse
+//		 401: unauthorizedResponse
 func (c *AuthPlzCtx) Create(rw web.ResponseWriter, req *web.Request) {
 	email := req.FormValue("email")
 	if !govalidator.IsEmail(email) {
-		log.Printf("api.Create: email parameter required")
+		log.Printf("Create: email parameter required")
 		rw.WriteHeader(http.StatusBadRequest)
 		return
 	}
 	password := req.FormValue("password")
 	if password == "" {
-		log.Printf("api.Create: password parameter required")
+		log.Printf("Create: password parameter required")
 		rw.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
 	u, e := c.global.userController.Create(email, password)
 	if e != nil {
-		log.Printf("api.Create: user creation failed with %s", e)
+		log.Printf("Create: user creation failed with %s", e)
 
 		if e == usercontroller.ErrorDuplicateAccount {
-			c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageCreateUserSuccess)
+			c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).CreateUserSuccess)
 			return
 		} else if e == usercontroller.ErrorPasswordTooShort {
-			c.WriteApiResult(rw, api.ApiResultError, api.ApiMessagePasswordComplexityTooLow)
+			c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).PasswordComplexityTooLow)
 			return
 		}
 
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageInternalError)
+		c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).InternalError)
 		return
 	}
 
 	if u == nil {
-		log.Printf("api.Create: user creation failed")
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageInternalError)
+		log.Printf("Create: user creation failed")
+		c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).InternalError)
 		return
 	}
 
-	log.Println("api.Create: Create OK")
+	log.Println("Create: Create OK")
 
-	c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageCreateUserSuccess)
+	c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).CreateUserSuccess)
+}
+
+// Parameters for the create user endpoint
+// swagger:parameters createUser
+type CreateUserParams struct {
+	// required: true
+	email string
+	// required: true
+	password string
 }
 
 // Handle an action token
@@ -79,40 +102,40 @@ func (c *AuthPlzCtx) HandleToken(u *datastore.User, tokenString string, rw web.R
 	// Check token validity
 	claims, err := c.global.tokenController.ParseToken(tokenString)
 	if err != nil {
-		fmt.Println("api.HandleToken: Invalid or expired token")
+		fmt.Println("HandleToken: Invalid or expired token")
 		rw.WriteHeader(http.StatusUnauthorized)
 		return fmt.Errorf("Invalid or expired token")
 	}
 
 	if u.ExtId != claims.Subject {
-		log.Println("api.HandleToken: Token subject does not match user id")
+		log.Println("HandleToken: Token subject does not match user id")
 		rw.WriteHeader(http.StatusUnauthorized)
 		return fmt.Errorf("Token subject does not match user id")
 	}
 
 	switch claims.Action {
 	case token.TokenActionUnlock:
-		log.Printf("api.HandleToken: Unlocking user\n")
+		log.Printf("HandleToken: Unlocking user\n")
 
 		c.global.userController.Unlock(u.Email)
 
 		// Create session
 		c.LoginUser(u, rw, req)
-		c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageUnlockSuccessful)
+		c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).UnlockSuccessful)
 		return nil
 
 	case token.TokenActionActivate:
-		log.Printf("api.HandleToken: Activating user\n")
+		log.Printf("HandleToken: Activating user\n")
 
 		c.global.userController.Activate(u.Email)
 
 		// Create session
 		c.LoginUser(u, rw, req)
-		c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageActivationSuccessful)
+		c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).ActivationSuccessful)
 		return nil
 
 	default:
-		log.Printf("api.HandleToken: Invalid token action\n")
+		log.Printf("HandleToken: Invalid token action\n")
 		rw.WriteHeader(http.StatusBadRequest)
 		return fmt.Errorf("Invalid token action")
 	}
@@ -133,24 +156,24 @@ func (c *AuthPlzCtx) Login(rw web.ResponseWriter, req *web.Request) {
 	}
 
 	if c.userid != "" {
-		c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageAlreadyAuthenticated)
+		c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).AlreadyAuthenticated)
 	}
 
 	// Attempt login
 	l, u, e := c.global.userController.Login(email, password)
 	if e != nil {
 		rw.WriteHeader(http.StatusUnauthorized)
-		log.Printf("api.Login: user controller error %s\n", e)
+		log.Printf("Login: user controller error %s\n", e)
 		return
 	}
 
 	// Handle simple logins
 	if l == &usercontroller.LoginSuccess {
-		log.Println("api.Login: Login OK")
+		log.Println("Login: Login OK")
 
 		// Create session
 		c.LoginUser(u, rw, req)
-		c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageLoginSuccess)
+		c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).LoginSuccessful)
 		return
 	}
 
@@ -162,16 +185,16 @@ func (c *AuthPlzCtx) Login(rw web.ResponseWriter, req *web.Request) {
 
 		tokenErr := c.HandleToken(u, tokenString, rw, req)
 		if tokenErr == nil {
-			log.Printf("api.Login: Token action complete\n")
+			log.Printf("Login: Token action complete\n")
 			return
 		} else {
-			log.Printf("api.Login: Token error %s\n", tokenErr)
+			log.Printf("Login: Token error %s\n", tokenErr)
 		}
 	}
 
 	// Handle not yet activated accounts
 	if l == &usercontroller.LoginUnactivated {
-		log.Println("api.Login: Account not activated")
+		log.Println("Login: Account not activated")
 		//TODO: prompt for activation (resend email?)
 		rw.WriteHeader(http.StatusUnauthorized)
 		//c.WriteApiResult(rw, api.ApiResultError, usercontroller.LoginUnactivated.Message);
@@ -180,7 +203,7 @@ func (c *AuthPlzCtx) Login(rw web.ResponseWriter, req *web.Request) {
 
 	// TODO: handle locked accounts
 	if l == &usercontroller.LoginLocked {
-		log.Println("api.Login: Account locked")
+		log.Println("Login: Account locked")
 		//TODO: prompt for unlock (resend email?)
 		rw.WriteHeader(http.StatusUnauthorized)
 		return
@@ -188,15 +211,15 @@ func (c *AuthPlzCtx) Login(rw web.ResponseWriter, req *web.Request) {
 
 	// Handle partial logins (2FA)
 	if l == &usercontroller.LoginPartial {
-		log.Println("api.Login: Partial login")
+		log.Println("Login: Partial login")
 		//TODO: fetch tokens and set flash for 2FA
 		c.U2FBindAuthenticationRequest(rw, req, u.ExtId)
 		rw.WriteHeader(http.StatusAccepted)
-		//c.WriteApiResult(rw, api.ApiResultError, api.ApiMessage2FARequired);
+		//c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).2FARequired);
 		return
 	}
 
-	log.Printf("api.Login: Login failed\n")
+	log.Printf("Login: Login failed\n")
 	rw.WriteHeader(http.StatusUnauthorized)
 }
 
@@ -234,23 +257,23 @@ func (c *AuthPlzCtx) Action(rw web.ResponseWriter, req *web.Request) {
 // Get user login status
 func (c *AuthPlzCtx) Status(rw web.ResponseWriter, req *web.Request) {
 	if c.userid == "" {
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageUnauthorized)
+		c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).Unauthorized)
 	} else {
-		c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageLoginSuccess)
+		c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).LoginSuccessful)
 	}
 }
 
-// Get user object
 func (c *AuthPlzCtx) AccountGet(rw web.ResponseWriter, req *web.Request) {
 	if c.userid == "" {
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageUnauthorized)
+		rw.WriteHeader(http.StatusUnauthorized)
+		return
 
 	} else {
 		// Fetch user from user controller
 		u, err := c.global.userController.GetUser(c.userid)
 		if err != nil {
 			log.Print(err)
-			c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageInternalError)
+			c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).InternalError)
 			return
 		}
 
@@ -261,7 +284,7 @@ func (c *AuthPlzCtx) AccountGet(rw web.ResponseWriter, req *web.Request) {
 // Get user object
 func (c *AuthPlzCtx) AccountPost(rw web.ResponseWriter, req *web.Request) {
 	if c.userid == "" {
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageUnauthorized)
+		rw.WriteHeader(http.StatusUnauthorized)
 		return
 	}
 
@@ -281,20 +304,21 @@ func (c *AuthPlzCtx) AccountPost(rw web.ResponseWriter, req *web.Request) {
 	_, err := c.global.userController.UpdatePassword(c.userid, oldPass, newPass)
 	if err != nil {
 		log.Print(err)
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageInternalError)
+		c.WriteApiResult(rw, api.ApiResultError, api.GetApiLocale(c.locale).InternalError)
 		return
 	}
 
-	c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessagePasswordUpdated)
+	c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).PasswordUpdated)
 }
 
 // End a user session
 func (c *AuthPlzCtx) Logout(rw web.ResponseWriter, req *web.Request) {
 	if c.userid == "" {
-		c.WriteApiResult(rw, api.ApiResultError, api.ApiMessageUnauthorized)
+		rw.WriteHeader(http.StatusUnauthorized)
+		return
 	} else {
 		c.LogoutUser(rw, req)
-		c.WriteApiResult(rw, api.ApiResultOk, api.ApiMessageLogoutSuccess)
+		c.WriteApiResult(rw, api.ApiResultOk, api.GetApiLocale(c.locale).LogoutSuccessful)
 	}
 }
 
